--- a/app/views/default/home.html.haml
+++ b/app/views/default/home.html.haml
@@ -1,7 +1,9 @@
-%h1 Different Services connected using Singly Service
+
+<h1 style="color:#003333"> Hi James,Welcome to CloudTags</h1>
 %h2
   - if @profiles
-    Nice to see you again!
+    
+    <h2 style="color:#FF0000">Nice to see you again!</h2>
   - else
    
 - if session[:access_token]
