--- a/app/views/signup/user.html.erb
+++ b/app/views/signup/user.html.erb
@@ -15,7 +15,7 @@
    <tr>
     <td><a href="https://api.singly.com/oauth/authenticate?client_id= 85899d78a8e2a4df04ac731ea67b212c &redirect_uri=http://localhost/auth/singly/auth/callback &service=facebook">
     <%= image_tag("Fbup.png", :alt => "rss feed") %></a></td>
-    <td><a href="https://api.singly.com/oauth/authenticate?client_id= 85899d78a8e2a4df04ac731ea67b212c &redirect_uri=http://localhost/auth/singly/auth/callback &service=facebook">
+    <td><a href="https://api.singly.com/oauth/authenticate?client_id= 85899d78a8e2a4df04ac731ea67b212c &redirect_uri=http://localhost/auth/singly/auth/callback &service=google">
     <%= image_tag("1.png", :alt => "rss feed") %></a></td>
     </tr>
     </table>
